[package]
name = "driver_mmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mmc-card = []
default = []

[dependencies]
driver_common = { path = "../driver_common" }
driver_block = { path = "../driver_block"}